<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<data>
    <variable
        name="storeShoeDetail"
        type="com.raphaelbaron.tangoshoesonline.ShoeDetailFragment" />
</data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/shoeDetailsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_sides"
            android:paddingTop="@dimen/margin_top"
            android:paddingEnd="@dimen/margin_sides"
            android:text="@string/shoe_label" />

        <EditText
            android:id="@+id/shoeDetailsLabelInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_sides"
            android:layout_marginEnd="@dimen/margin_sides"
            android:hint="@string/enter_shoe_label"
            android:importantForAutofill="no"
            android:inputType="textCapCharacters" />

        <TextView
            android:id="@+id/shoeDetailsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_sides"
            android:paddingTop="@dimen/margin_top"
            android:paddingEnd="@dimen/margin_sides"
            android:text="@string/Shoe_Name" />

        <EditText
            android:id="@+id/shoeDetailsNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:layout_marginStart="@dimen/margin_sides"
            android:layout_marginEnd="@dimen/margin_sides"
            android:hint="@string/enter_shoe_name"
            android:paddingTop="@dimen/margin_top"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/shoeDetailsCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_sides"
            android:paddingTop="@dimen/margin_top"
            android:paddingEnd="@dimen/margin_sides"
            android:text="@string/company" />

        <EditText
            android:id="@+id/shoeDetailsCompanyInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:layout_marginStart="@dimen/margin_sides"
            android:layout_marginEnd="@dimen/margin_sides"
            android:hint="@string/enter_shoe_company"
            android:paddingTop="@dimen/margin_top"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/shoeSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_sides"
            android:paddingTop="@dimen/margin_top"
            android:paddingEnd="@dimen/margin_sides"
            android:text="@string/shoe_size" />

        <EditText
            android:id="@+id/shoeSizeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginStart="@dimen/margin_sides"
            android:layout_marginEnd="@dimen/margin_sides"
            android:hint="@string/enter_shoe_size"
            android:paddingTop="@dimen/margin_top"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/shoeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_sides"
            android:paddingTop="@dimen/margin_top"
            android:paddingEnd="@dimen/margin_sides"
            android:text="@string/description" />

        <EditText
            android:id="@+id/shoeDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect|textMultiLine"
            android:layout_marginStart="@dimen/margin_sides"
            android:layout_marginEnd="@dimen/margin_sides"
            android:hint="@string/enter_description"
            android:paddingTop="@dimen/margin_top"
            android:importantForAutofill="no" />

        <Button
            android:layout_marginTop="@dimen/margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@drawable/corner"
            android:id="@+id/saveShoeButton"
            android:layout_gravity="center"/>

        <Button
            android:layout_marginTop="@dimen/margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/corner"
            android:id="@+id/cancelShoeButton"
            android:layout_gravity="center"/>


    </LinearLayout>
</layout>